fix x overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,7 +51,8 @@ Pixel Range:        Em Value    BP Name
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  overflow-x: hidden; }
 
 body {
   font-family: 'Montserrat', sans-serif;
